--- a/css/layout.css
+++ b/css/layout.css
@@ -1004,3 +1004,7 @@ footer .social-links li:first-child { margin-left: 0; }
 }
 #go-top a:hover { background-color: #0F9095; }
 
+.centered
+{
+    text-align:center;
+}
